etherpad-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad-service
  labels:
    app: etherpad
  namespace: etherpad-space
spec:
  type: ClusterIP
  ports:
    - targetPort: 9001
      port: 80
      protocol: TCP
  selector:
    app: etherpad
    name: etherpad-pod
