etherpad-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: etherpad-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
  namespace: etherpad-space
spec:
  tls:
    - hosts:
        - write.lengman.se
      secretName: etherpad-tls
  rules:
    - host: write.lengman.se
      http:
        paths:
          - backend:
              serviceName: etherpad-service
              servicePort: 80
            path: /
